--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-community-detail/02-organisms-01-content-types-community-detail.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-community-detail/02-organisms-01-content-types-community-detail.html
@@ -96,20 +96,6 @@
                 <article class="card card--background">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://http://www.commercekitchen.com/whedon-ipsum/">You Can't Take The Sky From Me</a></h3>
-                    <div class="card__author">
-                      <div class="card__author-inner">
-                        <div class="card__author-image"><img src="../../images-patternlab/sherlock-35-35.jpg"></div>
-                        <div class="card__author-name">Sherlock Holmes</div>
-                        <div class="card__author-date">1/01/2015</div>    
-                      </div>
-                    </div>
-                  </div>
-                </article>              </div>
-              <div class="views-row">
-                <article class="card card--background">
-                  <div class="card__content">
-                    <h2 class="card__type">Toolkit</h2>
                     <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
                     <div class="card__author">
                       <div class="card__author-inner">
@@ -124,12 +110,12 @@
                 <article class="card card--background">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+                    <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
                     <div class="card__author">
                       <div class="card__author-inner">
-                        <div class="card__author-image"><img src="../../images-patternlab/watson-35-35.jpg"></div>
-                        <div class="card__author-name">Dr. John Watson, M.D.</div>
-                        <div class="card__author-date">2/10/2015</div>    
+                        <div class="card__author-image"><img src="../../images-patternlab/cameron-35-35.jpg"></div>
+                        <div class="card__author-name">Cameron Howe</div>
+                        <div class="card__author-date">9/04/2015</div>    
                       </div>
                     </div>
                   </div>
@@ -148,6 +134,20 @@
                     </div>
                   </div>
                 </article>              </div>
+              <div class="views-row">
+                <article class="card card--background">
+                  <div class="card__content">
+                    <h2 class="card__type">Toolkit</h2>
+                    <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+                    <div class="card__author">
+                      <div class="card__author-inner">
+                        <div class="card__author-image"><img src="../../images-patternlab/watson-35-35.jpg"></div>
+                        <div class="card__author-name">Dr. John Watson, M.D.</div>
+                        <div class="card__author-date">2/10/2015</div>    
+                      </div>
+                    </div>
+                  </div>
+                </article>              </div>
           </div>
         </div>
       </div>
@@ -159,27 +159,27 @@
               <div class="views-row">
                 <article class="card card--icons">
                   <div class="card__image">
-                    <a href="http://hipsteripsum.me/"><img src="http://lorempixel.com/500/300/business/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://www.malevole.com/mv/misc/text/"><img src="http://lorempixel.com/500/300/sports/4/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
-                    <div><p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p></div>
+                    <h3 class="card__title"><a href="http://www.malevole.com/mv/misc/text/">Thunder, thunder, thundercats, Ho!</a></h3>
+                    <div><p>Beats all you've ever saw, been in trouble with the law since the day they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.</p></div>
                     <div class="card__counts">
                       <div class="view">
-                        <div class="has-icon--evidence" title="Evidence">2</div>
+                        <div class="has-icon--evidence" title="Evidence">6</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--comment" title="Comments">5</div>
+                        <div class="has-icon--comment" title="Comments">55</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--funding" title="Funding">104</div>
+                        <div class="has-icon--funding" title="Funding">245</div>
                       </div>
                       <div class="view">
                         <div class="has-icon--favorite" title="Favorites">3</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--assistance" title="Assistance">305</div>
+                        <div class="has-icon--assistance" title="Assistance">899</div>
                       </div>
                     </div>
                   </div>
@@ -217,27 +217,27 @@
               <div class="views-row">
                 <article class="card card--icons">
                   <div class="card__image">
-                    <a href="http://chrisvalleskey.com/fillerama/"><img src="http://lorempixel.com/500/300/cats/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://slipsum.com/lite/"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
-                    <div><p>The Knights Who Say Ni demand a sacrifice! …Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!</p></div>
+                    <h3 class="card__title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
+                    <div><p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p></div>
                     <div class="card__counts">
                       <div class="view">
-                        <div class="has-icon--evidence" title="Evidence">295</div>
+                        <div class="has-icon--evidence" title="Evidence">2</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--comment" title="Comments">1034</div>
+                        <div class="has-icon--comment" title="Comments">2</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--funding" title="Funding">450</div>
+                        <div class="has-icon--funding" title="Funding">4</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--favorite" title="Favorites">230</div>
+                        <div class="has-icon--favorite" title="Favorites">7</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--assistance" title="Assistance">487</div>
+                        <div class="has-icon--assistance" title="Assistance">4</div>
                       </div>
                     </div>
                   </div>
@@ -258,11 +258,11 @@
                 <article class="card card--icons">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__primary-title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
+                    <h3 class="card__primary-title"><a href="http://www.malevole.com/mv/misc/text/">Thunder, thunder, thundercats, Ho!</a></h3>
                     <div class="card__author">
-                      <div class="card__author-image"><img src="../../images-patternlab/scully-35-35.jpg"></div>
-                      <div class="card__author-name">Dana Scully</div>
-                      <div class="card__author-date">4/13/2015</div>    
+                      <div class="card__author-image"><img src="../../images-patternlab/tyrion-35-35.jpg"></div>
+                      <div class="card__author-name">Tyrion Lannister</div>
+                      <div class="card__author-date">6/08/2015</div>    
                     </div>
                     <div class="card__list">
                       <span class="card__list-label">Sectors:</span> 
@@ -270,7 +270,7 @@
                     </div>
                     <div class="card__counts">
                       <div class="view">
-                        <div class="has-icon--comment" title="Comments">5</div>
+                        <div class="has-icon--comment" title="Comments">55</div>
                       </div>
                       <div class="view">
                         <div class="has-icon--favorite" title="Favorites">3</div>
@@ -320,11 +320,11 @@
                 <article class="card card--icons">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
+                    <h3 class="card__primary-title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
                     <div class="card__author">
-                      <div class="card__author-image"><img src="../../images-patternlab/gordon-35-35.jpg"></div>
-                      <div class="card__author-name">Gordon Clark</div>
-                      <div class="card__author-date">10/25/2015</div>    
+                      <div class="card__author-image"><img src="../../images-patternlab/josh-35-35.jpg"></div>
+                      <div class="card__author-name">Joshua Lyman</div>
+                      <div class="card__author-date">7/22/2015</div>    
                     </div>
                     <div class="card__list">
                       <span class="card__list-label">Sectors:</span> 
@@ -332,10 +332,10 @@
                     </div>
                     <div class="card__counts">
                       <div class="view">
-                        <div class="has-icon--comment" title="Comments">1034</div>
+                        <div class="has-icon--comment" title="Comments">2</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--favorite" title="Favorites">230</div>
+                        <div class="has-icon--favorite" title="Favorites">7</div>
                       </div>
                     </div>
                   </div>
@@ -360,15 +360,15 @@
           <div class="view--card-view-3col">
               <div class="views-row">
                 <article class="card card--icons">
-                  <div class="card__number">256,000</div>
+                  <div class="card__number">1,245,324</div>
                   <div class="card__image">
-                    <a href="http://hipsteripsum.me/"><img src="http://lorempixel.com/500/300/business/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://www.malevole.com/mv/misc/text/"><img src="http://lorempixel.com/500/300/sports/4/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__primary-title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
+                    <h3 class="card__primary-title"><a href="http://www.malevole.com/mv/misc/text/">Thunder, thunder, thundercats, Ho!</a></h3>
                     <div class="card__list">
-                      <div class="card__list-label">Due by:</div> 4/13/2015
+                      <div class="card__list-label">Due by:</div> 6/08/2015
                     </div> 
                     <div class="card__list">
                       <div class="card__list-label">Eligibility:</div> <span class="has-icon-member" title="Member">Member</span> <span class="has-icon-community" title="Organization">Organization</span>
@@ -383,7 +383,7 @@
                     </div>
                     <div class="card__counts">
                       <div class="view">
-                        <div class="has-icon--comment" title="Comments">5</div>
+                        <div class="has-icon--comment" title="Comments">55</div>
                       </div>
                       <div class="view">
                         <div class="has-icon--favorite" title="Favorites">3</div>
@@ -440,15 +440,15 @@
               </div>
               <div class="views-row">
                 <article class="card card--icons">
-                  <div class="card__number">120,000,000</div>
+                  <div class="card__number">21,400</div>
                   <div class="card__image">
-                    <a href="http://chrisvalleskey.com/fillerama/"><img src="http://lorempixel.com/500/300/cats/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://slipsum.com/lite/"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
+                    <h3 class="card__primary-title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
                     <div class="card__list">
-                      <div class="card__list-label">Due by:</div> 10/25/2015
+                      <div class="card__list-label">Due by:</div> 7/22/2015
                     </div> 
                     <div class="card__list">
                       <div class="card__list-label">Eligibility:</div> <span class="has-icon-member" title="Member">Member</span> <span class="has-icon-community" title="Organization">Organization</span>
@@ -463,10 +463,10 @@
                     </div>
                     <div class="card__counts">
                       <div class="view">
-                        <div class="has-icon--comment" title="Comments">1034</div>
+                        <div class="has-icon--comment" title="Comments">2</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--favorite" title="Favorites">230</div>
+                        <div class="has-icon--favorite" title="Favorites">7</div>
                       </div>
                     </div>
                   </div>
@@ -517,13 +517,13 @@
                  <div class="layout-slat layout-slat--small">
                    <div class="layout-slat__media">      
                      <div class="view__author-image">
-                       <img src="../../images-patternlab/scully-35-35.jpg">
+                       <img src="../../images-patternlab/tyrion-35-35.jpg">
                      </div>
                    </div>
                    <div class="layout-slat__content">
-                     <div class="view__title"><a href="#">Whatever swag accusamus occupy, gentrify butcher tote bag</a></div>
+                     <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
                      <div class="view__meta">
-                       Posted by <strong>Dana Scully</strong> | April 13 at 10:14am
+                       Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
                      </div>
                    </div>
                  </div>
@@ -547,13 +547,13 @@
                  <div class="layout-slat layout-slat--small">
                    <div class="layout-slat__media">      
                      <div class="view__author-image">
-                       <img src="../../images-patternlab/gordon-35-35.jpg">
+                       <img src="../../images-patternlab/josh-35-35.jpg">
                      </div>
                    </div>
                    <div class="layout-slat__content">
-                     <div class="view__title"><a href="#">Help, help, I'm being repressed!</a></div>
+                     <div class="view__title"><a href="#">Yeah, I like animals better than people sometimes</a></div>
                      <div class="view__meta">
-                       Posted by <strong>Gordon Clark</strong> | October 25 at 3:51am
+                       Posted by <strong>Joshua Lyman</strong> | July 22 at 11:12am
                      </div>
                    </div>
                  </div>
