--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes/index.html
@@ -757,6 +757,82 @@
 							</div>
 						</div>
 					</div>
+					<div id="organisms-wanteds-teaser" class="sg-pattern">
+						<h2 class="sg-pattern-head" ><a href="../../patterns/02-organisms-02-view-modes-wanteds-teaser/02-organisms-02-view-modes-wanteds-teaser.html" class="patternLink" data-patternpartial="organisms-wanteds-teaser">Wanteds Teaser</a></h2>
+						<div class="sg-pattern-body">
+							<div class="layout-slat card card--listing">
+  <div class="layout-slat__media">
+    <a href="#"><img src="http://fpoimg.com/500x300?text=Card 5:3" alt="Card 5:3" height="300" width="500">
+</a>
+  </div>  
+  <div class="layout-slat__content">
+    <div class="card__meta">
+      <div class="card__type">People</div>
+      <div class="card__location">Albania</div>
+    </div>
+    <h3 class="card__title"><a href="#">Title</a></h3>
+    <div class="card__summary">
+      <p>This is the summary, which can contain <abbr title='Hyper Text Markup Language'>HTML</abbr> markup. It should be 600 characters or less.</p>
+    </div>
+    <div class="card__counts">
+      <div class="view">
+        <div title="Comments" class="has-icon--comment">10</div>
+      </div>
+      <div class="view">
+        <div title="Favorites" class="has-icon--favorite">10</div>
+      </div>
+      <div class="view">
+        <div title="Funding Available" class="has-icon--funding">10</div>
+      </div>
+      <div class="view">
+        <div title="Number of People Needed" class="has-icon--member">10</div>
+      </div>
+    </div>
+  </div>
+</div>
+							<div class="sg-code" style="display: none">
+									<div class="sg-code-contains">
+										This pattern contains: 
+											<a href="../../patterns/00-atoms-04-images-04-card-image/00-atoms-04-images-04-card-image.html"><code>atoms-card-image</code></a>
+									</div>
+								<h3 class="sg-code-head">HTML</h3>
+								<pre class="sg-code-html">
+									<code>
+										&lt;div class=&quot;layout-slat card card--listing&quot;&gt;
+  &lt;div class=&quot;layout-slat__media&quot;&gt;
+    &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;http://fpoimg.com/500x300?text=Card 5:3&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+&lt;/a&gt;
+  &lt;/div&gt;  
+  &lt;div class=&quot;layout-slat__content&quot;&gt;
+    &lt;div class=&quot;card__meta&quot;&gt;
+      &lt;div class=&quot;card__type&quot;&gt;People&lt;/div&gt;
+      &lt;div class=&quot;card__location&quot;&gt;Albania&lt;/div&gt;
+    &lt;/div&gt;
+    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Title&lt;/a&gt;&lt;/h3&gt;
+    &lt;div class=&quot;card__summary&quot;&gt;
+      &lt;p&gt;This is the summary, which can contain &lt;abbr title='Hyper Text Markup Language'&gt;HTML&lt;/abbr&gt; markup. It should be 600 characters or less.&lt;/p&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;card__counts&quot;&gt;
+      &lt;div class=&quot;view&quot;&gt;
+        &lt;div title=&quot;Comments&quot; class=&quot;has-icon--comment&quot;&gt;10&lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div class=&quot;view&quot;&gt;
+        &lt;div title=&quot;Favorites&quot; class=&quot;has-icon--favorite&quot;&gt;10&lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div class=&quot;view&quot;&gt;
+        &lt;div title=&quot;Funding Available&quot; class=&quot;has-icon--funding&quot;&gt;10&lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div class=&quot;view&quot;&gt;
+        &lt;div title=&quot;Number of People Needed&quot; class=&quot;has-icon--member&quot;&gt;10&lt;/div&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+									</code>
+								</pre>
+							</div>
+						</div>
+					</div>
 			</div> <!--end #sg-patterns-->
 	
 		</div><!--end .sg-main-->
