--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.html
@@ -698,13 +698,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/scully-35-35.jpg">
+                      <img src="../../images-patternlab/tyrion-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Whatever swag accusamus occupy, gentrify butcher tote bag</a></div>
+                    <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Dana Scully</strong> | April 13 at 10:14am
+                      Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
                     </div>
                   </div>
                 </div>
@@ -728,13 +728,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/gordon-35-35.jpg">
+                      <img src="../../images-patternlab/josh-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Help, help, I'm being repressed!</a></div>
+                    <div class="view__title"><a href="#">Yeah, I like animals better than people sometimes</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Gordon Clark</strong> | October 25 at 3:51am
+                      Posted by <strong>Joshua Lyman</strong> | July 22 at 11:12am
                     </div>
                   </div>
                 </div>
